fixed whitespace between header and section

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 /* styles for jobseekers.html
 	Created by Sherry, Vicent, and Dennis
 */
-
+*{
+    padding: 0;
+    margin: 0;
+}
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -9,12 +12,7 @@ body {
 }
 
 img {
-		max-width: 100%;
-		// margin-top: 0;
-	}
-
-header, header nav#navigator {
-	//margin-bottom: 0;
+	max-width: 100%;
 }
 
 header img:hover {
@@ -37,6 +35,7 @@ nav#navigator {
 
 nav ul#upperNav {
 	margin-top: 0;
+	margin-bottom: 15px;
 }
 
 
@@ -46,7 +45,7 @@ nav ul#upperNav li {
 	border-radius: 0.3em;
 	margin-left: 10px;
 	font-size: 0.7em;
-	padding: 10px;
+	padding: 8px;
 }
 
 nav ul li {
@@ -54,20 +53,21 @@ nav ul li {
 	padding-left: 15px;
 }
 
-section#content {
-	//margin: 0;
-}
-
 div#slideshow {
 	background-color: #EAEDEE;
-	//margin-top: 0;
 }
 
-div#slideshow img {
-	border: none;
+img#arrows {
+	
+    margin: 0 auto;
+    width: 50px;
+    height: 35px;
+}
+
+div#slides img {
 	display: block;
+	height: 350px;
 }
-
 
 div#onestop img {
 	padding: 30px;
@@ -82,7 +82,6 @@ div#onestop h1 {
 	position: absolute;
 	padding: 30px;
 }
-
 
 
 /* for screen less than 480px  */
@@ -113,19 +112,19 @@ and (max-width : 768px) {
 	}
 
 	nav ul#lowerNav {
-	padding-bottom: 20px;
-	text-align: center;
+		padding-bottom: 20px;
+		text-align: center;
 	}
 
 	nav ul#upperNav {
-	padding-top: 20px;
-	margin-left: 61%;
+		padding-top: 20px;
+		margin-left: 61%;
 	}
 
 	
 
-	div#slideshow img {
-		width: 60%;
+	div#slides img {
+		width: 70%;
 		margin: 0 auto;
 	}
 
